--- a/src/projects.njk
+++ b/src/projects.njk
@@ -4,8 +4,6 @@ layout: 'layouts/base.njk'
 description: "List of projects created by Alex Westerman. Some are open source! Click the link and check them out!"
 ---
 
-{% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
-{% set button_style = "inline-flex items-center justify-center font-medium gap-2 whitespace-nowrap rounded-md text-sm transition-all [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] border shadow-xs hover:bg-accent hover:text-accent-foreground bg-input/30 border-input hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" %}
 <h1 class="text-2xl">Projects</h1>
 <div class="justify-content m-4 flex items-center">
     <div class="grid grow grid-cols-1 gap-4 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3">
@@ -23,7 +21,7 @@ description: "List of projects created by Alex Westerman. Some are open source! 
                 <div data-slot="card-content" class="px-6">
                     <div class="mb-4 space-x-1">
                         {% for projectTag in project.projectTags %}
-                            <span class="{{ badge_style }}">{{ projectTag }}</span>
+                            <span class="{{ badgeStyle }}">{{ projectTag }}</span>
                         {% endfor %}
                     </div>
                     <img
@@ -39,21 +37,21 @@ description: "List of projects created by Alex Westerman. Some are open source! 
                     {% for link in project.projectLinks %}
                         {% if link.linkType ==="github" %}
 
-                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="GitHub Repository">
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ buttonStyle }}" aria-label="GitHub Repository">
                                 {% include 'icons/code_xml.njk' %}<span>Source Code</span>
                             </button>
                             <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
 
                         {% elif link.linkType==="demo" %}
 
-                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="Online Demo">
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ buttonStyle }}" aria-label="Online Demo">
                                 {% include 'icons/app_window.njk' %}<span>Demo</span>
                             </button>
                             <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
 
                         {% elif link.linkType==="misc" %}
 
-                            <button id="{{ link.linkType }}{{ project.projectId }}-{{ link.linkDesc | slugify }}" class="{{ button_style }}" aria-label="{{ link.linkDesc }}">
+                            <button id="{{ link.linkType }}{{ project.projectId }}-{{ link.linkDesc | slugify }}" class="{{ buttonStyle }}" aria-label="{{ link.linkDesc }}">
                                 {% include 'icons/link.njk' %}<span>{{ link.linkDesc }}</span>
                             </button>
                             <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}-{{ link.linkDesc|slugify }}").onclick = () => window.open("{{ link.linkURL }}")</script>
