--- a/src/resume.njk
+++ b/src/resume.njk
@@ -3,12 +3,11 @@ title: Alex Westerman's Resume
 layout: 'layouts/base.njk'
 description: "Online (and most updated version) of Alex Westerman's Resume. Look here if you want to offer me a Software Engineer position!"
 ---
-{% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
 <div class="m-4">
     <h4 class="text-4xl underline">Skills</h4>
     <div class="mb-4 space-x-1 space-y-2 ">
         {% for skill in resume.skills %}
-            <span class="{{badge_style}}{% if skill.years < 2 %} text-md {% elif skill.years < 3 %} text-lg {%elif skill.years < 4 %} text-xl {% elif skill.years < 5 %} text-2xl {% elif skill.years < 6 %} text-3xl {% else %} text-4xl {% endif %}">
+            <span class="{{badgeStyle}}{% if skill.years < 2 %} text-md {% elif skill.years < 3 %} text-lg {%elif skill.years < 4 %} text-xl {% elif skill.years < 5 %} text-2xl {% elif skill.years < 6 %} text-3xl {% else %} text-4xl {% endif %}">
                 {{ skill.name }}
             </span>
         {% endfor %}
