Add codeberg profile link

--- a/src/index.njk
+++ b/src/index.njk
@@ -35,6 +35,9 @@ description: "The website of Alex Westerman. Checkout the blog for very cool (ra
             <button title="GitHub" id="ghBtn" class="{{socialBtn}}">{% include 'icons/github.njk'%}</button>
             <script>document.getElementById('ghBtn').onclick = () => window.open("https://github.com/FaceFTW")</script>
 
+			<button title="Codeberg (Mirror)" id="cbBtn" class="{{socialBtn}}"><div class="filter-svg-green size-12">{% include 'icons/codeberg.njk'%}</button></button>
+            <script>document.getElementById('cbBtn').onclick = () => window.open("https://codeberg.org/FaceFTW")</script>
+
             <button title="Email" id="mailBtn" class="{{socialBtn}}">{% include 'icons/mail.njk'%}</button>
             <script>document.getElementById('mailBtn').onclick = () => window.open("mailto:alex@faceftw.dev")</script>
 
