--- a/src/projects.njk
+++ b/src/projects.njk
@@ -38,7 +38,14 @@ description: "List of projects created by Alex Westerman. Some are open source! 
                         {% if link.linkType ==="github" %}
 
                             <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ buttonStyle }}" aria-label="GitHub Repository">
-                                {% include 'icons/code_xml.njk' %}<span>Source Code</span>
+                                {% include 'icons/code.njk' %}<span>GitHub Repository</span>
+                            </button>
+                            <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
+
+                        {% elif link.linkType ==="repo_mirror" %}
+
+                            <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ buttonStyle }}" aria-label="{{ link.linkDesc }} Mirror Repository">
+                                {% include 'icons/square_code.njk' %}<span>{{ link.linkDesc }} Mirror</span>
                             </button>
                             <script>document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")</script>
 
